[tool.poetry]
name = "fastapi-demo-"
version = "0.1.0"
description = ""
authors = ["kashishkumarvaya <kashish@vaya.finance>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
SQLAlchemy = "^1.4.37"
passlib = "^1.7.4"
bcrypt = "^3.2.2"
python-jose = "^3.3.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
